--- a/zed/settings.json
+++ b/zed/settings.json
@@ -23,7 +23,7 @@
   "tab_size": 2,
   "theme": "Dracula",
   "vim_mode": true,
-  "relative_line_numbers": false,
+  "relative_line_numbers": true,
   "terminal": {
     "default_width": 1000,
     "dock": "bottom"
