--- a/zed/settings.json
+++ b/zed/settings.json
@@ -15,7 +15,7 @@
   // "format_on_save": "off",
   "formatter": "language_server",
   "hard_tabs": false,
-  "preferred_line_length": 99999999999999999,
+  "preferred_line_length": 9999,
   "remove_trailing_whitespace_on_save": true,
   "show_copilot_suggestions": true,
   "show_whitespaces": "all",
