adjust tmux split bindings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,8 +13,8 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-bind h split-window -v
-bind v split-window -h
+bind j split-window -v
+bind l split-window -h
 
 ## plugins
 
