update zed settings after new zed release

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -15,17 +15,18 @@
   // "format_on_save": "off",
   "formatter": "language_server",
   "hard_tabs": false,
-  "preferred_line_length": 9999,
   "hover_popover_enabled": true,
+  "preferred_line_length": 9999,
+  "relative_line_numbers": true,
   "remove_trailing_whitespace_on_save": true,
   "show_copilot_suggestions": true,
   "show_whitespaces": "all",
   "soft_wrap": "none",
   "tab_size": 2,
   "theme": "Dracula",
-  "vim_mode": true,
+  "ui_font_family": "FiraCode Nerd Font",
   "vertical_scroll_margin": 10,
-  "relative_line_numbers": true,
+  "vim_mode": true,
   "inlay_hints": {
     "enabled": true,
     "show_other_hints": true,
