update tmux conf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 
 unbind C-b
 
@@ -15,6 +15,15 @@ bind-key l select-pane -R
 
 bind j split-window -v
 bind l split-window -h
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
+## for linux to fix the tmux colors
+# set-option -sa terminal-overrides ",xterm*:Tc"
 
 ## plugins
 
