--- a/zed/settings.json
+++ b/zed/settings.json
@@ -39,9 +39,7 @@
     "default_width": 1000,
     "dock": "bottom"
   },
-  "wrap_guides": [
-    100
-  ],
+  "wrap_guides": [100],
   "lsp": {
     "solargraph": {
       "initialization_options": {
@@ -60,10 +58,7 @@
       "format_on_save": {
         "external": {
           "command": "prettier",
-          "arguments": [
-            "--stdin-filepath",
-            "{buffer_path}"
-          ]
+          "arguments": ["--stdin-filepath", "{buffer_path}"]
         }
       }
     },
@@ -71,10 +66,7 @@
       "format_on_save": {
         "external": {
           "command": "prettier",
-          "arguments": [
-            "--stdin-filepath",
-            "{buffer_path}"
-          ]
+          "arguments": ["--stdin-filepath", "{buffer_path}"]
         }
       }
     },
@@ -82,10 +74,7 @@
       "format_on_save": {
         "external": {
           "command": "prettier",
-          "arguments": [
-            "--stdin-filepath",
-            "{buffer_path}"
-          ]
+          "arguments": ["--stdin-filepath", "{buffer_path}"]
         }
       }
     },
@@ -93,10 +82,7 @@
       "format_on_save": {
         "external": {
           "command": "prettier",
-          "arguments": [
-            "--stdin-filepath",
-            "{buffer_path}"
-          ]
+          "arguments": ["--stdin-filepath", "{buffer_path}"]
         }
       }
     },
@@ -104,10 +90,7 @@
       "format_on_save": {
         "external": {
           "command": "prettier",
-          "arguments": [
-            "--stdin-filepath",
-            "{buffer_path}"
-          ]
+          "arguments": ["--stdin-filepath", "{buffer_path}"]
         }
       }
     },
@@ -115,12 +98,7 @@
       "format_on_save": {
         "external": {
           "command": "mix",
-          "arguments": [
-            "format",
-            "--stdin-filename",
-            "{buffer_path}",
-            "-"
-          ]
+          "arguments": ["format", "--stdin-filename", "{buffer_path}", "-"]
         }
       }
     }
