--- a/zed/settings.json
+++ b/zed/settings.json
@@ -7,6 +7,13 @@
 // custom settings, run the `open default settings` command
 // from the command palette or from `Zed` application menu.
 {
+  "assistant": {
+    "default_model": {
+      "provider": "openai",
+      "model": "gpt-4-turbo-preview"
+    },
+    "version": "2"
+  },
   "autosave": "on_focus_change",
   "base_keymap": "VSCode",
   "buffer_font_family": "FiraCode Nerd Font",
