--- a/zed/settings.json
+++ b/zed/settings.json
@@ -14,7 +14,7 @@
     },
     "version": "2"
   },
-  "autosave": "on_focus_change",
+  "autosave": "on_window_change",
   "base_keymap": "VSCode",
   "buffer_font_family": "FiraCode Nerd Font",
   "buffer_font_size": 13.5,
@@ -86,6 +86,7 @@
         "!rubocop",
         "!ruby-lsp",
         "solargraph",
+        "tailwindcss-language-server",
         "..."
       ]
     },
