--- a/zed/settings.json
+++ b/zed/settings.json
@@ -7,6 +7,7 @@
 // custom settings, run the `open default settings` command
 // from the command palette or from `Zed` application menu.
 {
+  "icon_theme": "Zed (Default)",
   "features": {
     "edit_prediction_provider": "zed"
   },
@@ -34,7 +35,7 @@
   "show_whitespaces": "all",
   "soft_wrap": "none",
   "tab_size": 2,
-  "theme": "Dracula Custom",
+  "theme": "Catppuccin Mocha",
   "ui_font_family": "FiraCode Nerd Font",
   "vertical_scroll_margin": 10,
   "vim_mode": true,
