--- a/zed/settings.json
+++ b/zed/settings.json
@@ -35,7 +35,7 @@
   "show_whitespaces": "all",
   "soft_wrap": "none",
   "tab_size": 2,
-  "theme": "Catppuccin Mocha",
+  "theme": "Catppuccin Macchiato",
   "ui_font_family": "FiraCode Nerd Font",
   "vertical_scroll_margin": 10,
   "vim_mode": true,
@@ -152,6 +152,17 @@
       }
     },
     "TSX": {
+      "format_on_save": {
+        "external": {
+          "command": "prettier",
+          "arguments": [
+            "--stdin-filepath",
+            "{buffer_path}"
+          ]
+        }
+      }
+    },
+    "YAML": {
       "format_on_save": {
         "external": {
           "command": "prettier",
