update cursor shape in zed and ghostty

--- a/ghostty/config
+++ b/ghostty/config
@@ -2,10 +2,12 @@
 background-opacity = "0.9"
 background-blur = "true"
 confirm-close-surface = "false"
+cursor-style= "block"
 font-family = "FiraCode Nerd Font"
 font-size = "14"
 macos-titlebar-proxy-icon = "hidden"
 theme = "catppuccin-macchiato"
+shell-integration-features = "no-cursor"
 # title = " "
 window-padding-x = "10"
 window-save-state = "always"
