--- a/zed/settings.json
+++ b/zed/settings.json
@@ -7,14 +7,14 @@
 // custom settings, run the `open default settings` command
 // from the command palette or from `Zed` application menu.
 {
-  "icon_theme": "Zed (Default)",
+  "icon_theme": "Catppuccin Macchiato",
   "features": {
     "edit_prediction_provider": "zed"
   },
   "assistant": {
     "default_model": {
-      "provider": "copilot_chat",
-      "model": "gpt-4o"
+      "provider": "zed.dev",
+      "model": "claude-3-7-sonnet-latest"
     },
     "version": "2"
   },
