use zed assistant with copilot

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -9,23 +9,14 @@
 {
   "icon_theme": "Catppuccin Macchiato",
   "features": {
-    "edit_prediction_provider": "zed",
-    "copilot": {
-      "enabled": true
-    }
+    "edit_prediction_provider": "zed"
   },
   "assistant": {
     "version": "2",
     "default_model": {
       "provider": "copilot_chat",
       "model": "gpt-4o"
-    },
-    "inline_alternatives": [
-      {
-        "provider": "copilot_chat",
-        "model": "claude-3-7-sonnet-latest"
-      }
-    ]
+    }
   },
   "autosave": "on_window_change",
   "base_keymap": "VSCode",
@@ -67,7 +58,9 @@
     "default_width": 1000,
     "dock": "bottom"
   },
-  "wrap_guides": [100],
+  "wrap_guides": [
+    100
+  ],
   "lsp": {
     // "ruby-lsp": {
     //   "initialization_options": {
@@ -84,7 +77,9 @@
     "solargraph": {
       "binary": {
         "path": "/Users/mauriciolima/.asdf/shims/solargraph",
-        "arguments": ["stdio"]
+        "arguments": [
+          "stdio"
+        ]
       },
       "initialization_options": {
         "diagnostics": true,
@@ -99,10 +94,20 @@
   },
   "languages": {
     "Ruby": {
-      "language_servers": ["!rubocop", "!ruby-lsp", "solargraph", "..."]
+      "language_servers": [
+        "!rubocop",
+        "!ruby-lsp",
+        "solargraph",
+        "..."
+      ]
     },
     "Elixir": {
-      "language_servers": ["next-ls", "!lexical", "!elixir-ls", "..."]
+      "language_servers": [
+        "next-ls",
+        "!lexical",
+        "!elixir-ls",
+        "..."
+      ]
       // "format_on_save": {
       //   "external": {
       //     "command": "mix",
@@ -119,7 +124,10 @@
       "format_on_save": {
         "external": {
           "command": "prettier",
-          "arguments": ["--stdin-filepath", "{buffer_path}"]
+          "arguments": [
+            "--stdin-filepath",
+            "{buffer_path}"
+          ]
         }
       }
     },
@@ -127,7 +135,10 @@
       "format_on_save": {
         "external": {
           "command": "prettier",
-          "arguments": ["--stdin-filepath", "{buffer_path}"]
+          "arguments": [
+            "--stdin-filepath",
+            "{buffer_path}"
+          ]
         }
       }
     },
@@ -135,7 +146,10 @@
       "format_on_save": {
         "external": {
           "command": "prettier",
-          "arguments": ["--stdin-filepath", "{buffer_path}"]
+          "arguments": [
+            "--stdin-filepath",
+            "{buffer_path}"
+          ]
         }
       }
     },
@@ -143,7 +157,10 @@
       "format_on_save": {
         "external": {
           "command": "prettier",
-          "arguments": ["--stdin-filepath", "{buffer_path}"]
+          "arguments": [
+            "--stdin-filepath",
+            "{buffer_path}"
+          ]
         }
       }
     },
@@ -151,7 +168,10 @@
       "format_on_save": {
         "external": {
           "command": "prettier",
-          "arguments": ["--stdin-filepath", "{buffer_path}"]
+          "arguments": [
+            "--stdin-filepath",
+            "{buffer_path}"
+          ]
         }
       }
     },
@@ -159,7 +179,10 @@
       "format_on_save": {
         "external": {
           "command": "prettier",
-          "arguments": ["--stdin-filepath", "{buffer_path}"]
+          "arguments": [
+            "--stdin-filepath",
+            "{buffer_path}"
+          ]
         }
       }
     }
