--- a/zed/settings.json
+++ b/zed/settings.json
@@ -104,8 +104,10 @@
     "Ruby": {
       "language_servers": [
         "ruby-lsp",
-        "!solargraph",
         "rubocop",
+        "!solargraph",
+        "!sorbet",
+        "!steep",
         "..."
       ]
     },
