update zed settings

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -9,20 +9,20 @@
 {
   "icon_theme": "Catppuccin Macchiato",
   "features": {
-    // "edit_prediction_provider": "zed"
-    "edit_prediction_provider": "copilot"
+    "edit_prediction_provider": "zed"
+    // "edit_prediction_provider": "copilot"
   },
   "agent": {
+    "default_profile": "ask",
     "play_sound_when_agent_done": true,
     "always_allow_tool_actions": true,
-    "version": "2",
     "inline_assistant_model": {
-      "provider": "copilot_chat",
-      "model": "claude-sonnet-4"
+      "provider": "google",
+      "model": "gemini-2.5-flash"
     },
     "default_model": {
       "provider": "copilot_chat",
-      "model": "claude-sonnet-4"
+      "model": "gpt-4.1"
     }
   },
   "autosave": "on_window_change",
@@ -40,7 +40,6 @@
   "preferred_line_length": 9999,
   "relative_line_numbers": true,
   "remove_trailing_whitespace_on_save": true,
-  "show_inline_suggestions": true,
   "show_whitespaces": "all",
   "soft_wrap": "none",
   "tab_size": 2,
@@ -59,8 +58,7 @@
   },
   "edit_predictions": {
     "disabled_globs": [],
-    "mode": "eager",
-    "enabled": true
+    "mode": "eager"
   },
   "terminal": {
     "copy_on_select": true,
