update Ghostty color scheme

--- a/ghostty/config
+++ b/ghostty/config
@@ -6,7 +6,7 @@ cursor-style= "block_hollow"
 font-family = "FiraCode Nerd Font"
 font-size = "14"
 macos-titlebar-proxy-icon = "hidden"
-theme = "catppuccin-macchiato"
+theme = "Catppuccin Macchiato"
 shell-integration-features = "no-cursor"
 # title = " "
 window-padding-x = "10"
