--- a/zed/settings.json
+++ b/zed/settings.json
@@ -41,6 +41,13 @@
       "show_avatar": true
     }
   },
+  "gutter": {
+    "line_numbers": true,
+    "min_line_number_digits": 2,
+    "runnables": false,
+    "breakpoints": false,
+    "folds": false
+  },
   "hard_tabs": false,
   "hide_mouse": "on_typing",
   "hover_popover_enabled": true,
