--- a/zed/settings.json
+++ b/zed/settings.json
@@ -10,10 +10,6 @@
   "colorize_brackets": true,
   "confirm_quit": true,
   "icon_theme": "Catppuccin Macchiato",
-  "features": {
-    "edit_prediction_provider": "zed"
-    // "edit_prediction_provider": "copilot"
-  },
   "agent": {
     "default_model": {
       "provider": "copilot_chat",
@@ -72,6 +68,7 @@
     "show_type_hints": false
   },
   "edit_predictions": {
+    "provider": "zed",
     "disabled_globs": [],
     "mode": "eager"
   },
