--- a/zed/settings.json
+++ b/zed/settings.json
@@ -11,6 +11,9 @@
   "confirm_quit": true,
   "icon_theme": "Catppuccin Macchiato",
   "agent": {
+    "tool_permissions": {
+      "default": "allow"
+    },
     "default_model": {
       "provider": "copilot_chat",
       "model": "claude-haiku-4.5"
@@ -21,8 +24,7 @@
     },
     "default_profile": "ask",
     "model_parameters": [],
-    "play_sound_when_agent_done": true,
-    "always_allow_tool_actions": true
+    "play_sound_when_agent_done": true
   },
   "autosave": "on_window_change",
   "base_keymap": "VSCode",
